# Chess

./: .gitignore  Bishop.cpp  Bishop.hpp  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessMain.cpp  ChessPiece.cpp  ChessPiece.hpp  King.cpp  Knight.cpp  Pawn.cpp  Pawn.hpp  Queen.cpp  Rook.cpp  Rook.hpp  Stalemate.txt  chessboard.cpp  chessboard.hpp  chesspiece.cpp  chesspiece.hpp  errors.h  helper.cpp  helper.hpp  main.cpp  makefile  notes.txt
include/: Bishop.hpp  ChessBoard.hpp  Chesspiece.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp  Tests.hpp  helper.hpp
src/: ChessBoard.cpp  ChessPiece.cpp  Chesspiece.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
tests/: Castling.txt  Promotion.txt  Stalemate.txt  Tests.cpp  enPassant.txt
